kubernetes/cluster/extras/bento-pdf/http-scaled-object.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keda-http-interceptor
  namespace: extras
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - name: http
      port: 8080
