kubernetes/cluster/extras/bento-pdf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bento-pdf
  namespace: extras
  labels:
    app.kubernetes.io/name: bento-pdf
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/custom-http-errors: "503"
    nginx.ingress.kubernetes.io/default-backend: kube-snorlax
spec:
  rules:
    - host: pdf.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                # name: bento-pdf
                name: keda-http-interceptor
                port:
                  number: 8080
  tls:
    - hosts:
        - pdf.brhd.io
      secretName: pdf-brhd-io-tls
